<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/change_level_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_level_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/button_test"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_level_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/button_easy"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_level_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/button_normal"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_level_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/button_hard"
        android:textColor="@color/white" />


</LinearLayout>