<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.GameFinishFragment">

    <ImageView
        android:id="@+id/image_result"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/game_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/smile"

        />

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_required_right_answer"
        app:layout_constraintBottom_toTopOf="@+id/tv_score_answers"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_score_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_your_score"
        app:layout_constraintBottom_toTopOf="@+id/tv_min_required_percent"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_answers"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_min_required_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_min_required_percent"
        app:layout_constraintBottom_toTopOf="@+id/tv_your_percent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score_answers"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_your_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_your_percent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_required_percent"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_start_bg"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/button_try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>