<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.fragment_welcome">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="32dp"
                android:contentDescription="@string/welcome_logo"
                android:gravity="center"
                android:src="@drawable/brain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tv_name_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

            <TextView
                android:id="@+id/tv_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tv_rules_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tv_example_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@+id/tv_rules"

                />

            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/button_start_bg"
                android:text="@string/button_start_text"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>